# 65co2

./: .gitignore  65co2.cpp  65co2.h  CMakeCache.txt  CMakeLists.txt  LIFE.ras  Makefile  README.md  apple1.cpp  apple1.h  apple1.inc  apple1basic.h  cmake_install.cmake  krusader13.h  main.cpp  makefile  msbasic.h  msbasic_code.h  old_makefile  pia.h  ranmaze.bas  ranmaze.mon  ranmaze.sym  rastomon  testcpu  wozmon.h  wozmon.s  wozmon.sym
asm/: LIFE.asm  LIFE.mon  apple1pi.mon  intout.mon  intout.s  krusader.test.asm  ranmaze.asm  ranmaze.bas  ranmaze.mon  wozmon.bin.txt  wozmon.s
functionalTest/: import_bin  intel_to_woz  miBreakpoint.h  test.cpp
js/: index.html
msbasic/: apple1.cfg  apple1_extra.s  apple1_iscntc.s  apple_extra.s  apple_extra_test.s  apple_iscntc.s  applesoft.cfg  defines.s  defines_aim65.s  defines_apple.s  defines_apple1.s  defines_cbm1.s  defines_kim.s  defines_microtan.s  defines_osi.s  defines_sym1.s  eval.s  extra.s  float.s  header.s  init.s  inline.s  input.s  iscntc.s  loadsave.s  make.sh  poke.s  print.s  program.s  token.s  trig.s
msbasic/tmp/: applesoft.h  applesoft.hex  applesoft.lbl  applesoft.lst
programs/: 23-match.bas  amazing.bas  ansiamazing.bas  ansimandel.bas  blackbox.bas  dualansimandel.bas  graveyard.bas  hexapawn.bas  hw_tests.bas  inkblot.bas  lissajous.bas  love.bas  love_rh.bas  mandel.bas  mandel_alt.bas  mazegame.bas  menu.bas  remtest.bas  rndtest.bas  seive.bas  sinewave.bas  snoopy.bas  test.bas  test1.bas  testdim.bas  train.bas
src/: apple1.cpp  apple1.h  apple1stdio.cpp  apple1stdio.h  main.cpp  testcpu.cpp  testcpu.h
src/Cpu/: 65co2.cpp  65co2.h
src/Roms/: applesoft_lite_0_4.h  msbasic.h  msbasic_code.h  wozmon.h  wozmon_code.h
src/Tests/: ADC.cpp  AND.cpp  ASL.cpp  BIT.cpp  Branches.cpp  CMP.cpp  CPX.cpp  CPY.cpp  DEC.cpp  EOR.cpp  INC.cpp  Jumps.cpp  LDA.cpp  LDX.cpp  LDY.cpp  LSR.cpp  Misc.cpp  ORA.cpp  ROL.cpp  ROR.cpp  SBC.cpp  STA.cpp  STX.cpp  STY.cpp  STZ.cpp  Stack.cpp  StatusFlags.cpp  Transfers.cpp
test/: 6502_functional_test.a65  makefile  report.i65  test.cpp
